...
    const _FeatureCardData(
      title: 'Wellness Resources',
      image: 'https://cdn.brewersassociation.org/wp-content/uploads/2024/05/29100101/illustration-of-person-with-harmonious-mental-health-1200x800-1.jpg',
      route: 'student-mental-health-resources',
    ),
    const _FeatureCardData(
      title: 'Support Contacts',
      image: 'https://centerforliving.org/wp-content/uploads/2023/06/nycfl_1155348268.jpg',
      route: 'student-contacts',
    ),
    const _FeatureCardData(
      title: 'AI Support Chatbot',
      image: 'https://imgs.search.brave.com/xZ5Z4_2vW97qZoLQMyse6j4mXIXbT4G5zzYpGRPWLM0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93cC5z/ZmRjZGlnaXRhbC5j/b20vZW4tdXMvd3At/Y29udGVudC91cGxv/YWRzL3NpdGVzLzQv/MjAyNS8wMy9tYXJx/dWVlLWFnZW50Zm9y/Y2UtYWktY2hhdGJv/dC5wbmc_dz0xMDI0',
...

  @override
  Widget build(BuildContext context) {
    return GestureDetector(
      onTap: () => FocusScope.of(context).unfocus(),
      child: Scaffold(
        key: const Key('studentHomeScreen'),
        backgroundColor: const Color.fromARGB(255, 242, 241, 248),
        appBar: AppBar(
          backgroundColor: const Color.fromARGB(255, 242, 241, 248),
          elevation: 0,
          leading: Builder(
            builder: (context) => IconButton(
...
